--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Crawler-js",
+  "name": "crawler-js",
   "description": "Opensource Framework Crawler in Node.js",
   "homepage" : "http://crawlerjs.org",
   "version": "0.0.12",
