--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "grunt test"
+    "test": "make test"
   },
   "repository": {
     "type": "git",
@@ -36,6 +36,7 @@
     "chai": "^1.9.2",
     "coveralls": "^2.11.2",
     "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-run": "^0.2.4",
     "istanbul": "^0.3.2",
     "jshint": "^2.5.6",
@@ -44,6 +45,11 @@
   },
   "dependencies": {
     "bluebird": "^2.3.6",
+    "eventary": "^2.0.1",
+    "grunt-jsdoc-to-markdown": "^0.4.2",
+    "joi": "^4.9.0",
+    "node-cache": "^1.0.3",
+    "r...e": "^0.2.0",
     "request": "^2.45.0",
     "xmldom": "^0.1.19",
     "xpath": "0.0.7"
