ranges e modificações no agente

--- a/package.json
+++ b/package.json
@@ -47,8 +47,9 @@
     "bluebird": "^2.3.6",
     "eventary": "^2.0.1",
     "grunt-jsdoc-to-markdown": "^0.4.2",
+    "handlebars": "^2.0.0",
     "joi": "^4.9.0",
-    "node-cache": "^1.0.3",
+    "mustache": "^0.8.2",
     "r...e": "^0.2.0",
     "request": "^2.45.0",
     "xmldom": "^0.1.19",
