--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "crawlerjs",
   "version": "1.0.0",
-  "description": "Opensource web data extraction for Node.js",
+  "description": "Opensource web data extraction framework for Node.js",
   "main": "./lib/crawler.js",
   "directories": {
     "example": "examples",
@@ -33,26 +33,26 @@
   },
   "homepage": "https://github.com/CrawlerJS/CrawlerJS",
   "devDependencies": {
-    "chai": "^1.9.2",
-    "coveralls": "^2.11.2",
-    "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
-    "grunt-run": "^0.2.4",
-    "istanbul": "^0.3.2",
-    "jshint": "^2.5.6",
-    "mocha": "^1.21.5",
-    "nock": "^0.48.1"
+    "chai": "2.1.2",
+    "coveralls": "2.11.2",
+    "grunt": "0.4.5",
+    "grunt-cli": "0.1.13",
+    "grunt-run": "0.3.0",
+    "istanbul": "0.3.8",
+    "jshint": "2.5.6",
+    "mocha": "2.2.1",
+    "nock": "1.2.0"
   },
   "dependencies": {
-    "bluebird": "^2.3.6",
-    "eventary": "^2.0.1",
-    "grunt-jsdoc-to-markdown": "^0.4.2",
-    "handlebars": "^2.0.0",
-    "joi": "^4.9.0",
-    "mustache": "^0.8.2",
-    "r...e": "^0.2.0",
-    "request": "^2.45.0",
-    "xmldom": "^0.1.19",
-    "xpath": "0.0.7"
+    "bluebird": "2.3.6",
+    "eventary": "2.0.1",
+    "grunt-jsdoc-to-markdown": "0.4.2",
+    "handlebars": "3.0.0",
+    "joi": "6.0.8",
+    "mustache": "1.1.0",
+    "r...e": "0.2.0",
+    "request": "2.45.0",
+    "xmldom": "0.1.19",
+    "xpath": "0.0.9"
   }
 }
